--- a/java_script/intro.html
+++ b/java_script/intro.html
@@ -12,6 +12,11 @@
     <p>we can do some baisc operation like Arithmetic,Logical,Comprision,Relational,Tarnery</p>
     <p>Script is executed on events like click blur focus keyup keypress keydow mousein mouseout</p>
     <p>Mordern JS Ecmascript</p>
+    <p>it is a synchrronous lan</p>
+    <p>world wide 95% uses</p>
+    <p>More Than 14 Lakh Library</p>
+    <p>Famous Framework are Next and Node</p>
+    <p>Famous Library are J-Query,React and Vue</p>
     <ul>
         <li>Slider</li>
         <li>Validation</li>
