--- a/Assigment/Module-4-Javascript/index.html
+++ b/Assigment/Module-4-Javascript/index.html
@@ -51,6 +51,7 @@
             </div>
             <div class="col-80">
                 <h1 class="tc">Module (JAVASCRIPT BASIC & DOM) – 4 </h1>
+                <p class="title bounce">JAVA SCRIPT ASSIGMENT</p>
                 <div class="que1 dis">
                     <div class="que">
                         <h2>What is JavaScript?</h2>
@@ -559,6 +560,7 @@
                 targetQuestion.style.display = "block";
             }
         });
+
     </script>
 
 </body>
