--- a/JQUERY/Task/16-jan/index.html
+++ b/JQUERY/Task/16-jan/index.html
@@ -30,17 +30,13 @@
     <script>
         a = 50;
         b = 50;
-        // $("div").click(function () {
-
-        //     $(this).width(a);
-        //     $(this).height(b);
-        //     a -= 5;
-        //     b -= 5;
-        // })
         $("div").click(function () {
-            $(this).innerHeight(a);
-            a -= 5
-        });
+            $(this).width(a);
+            $(this).height(b);
+            a -= 5;
+            b -= 5;
+        })
+       
     </script>
 </body>
 
