--- a/Estatein/index.html
+++ b/Estatein/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Essest</title>
+    <title>Estatein</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,20 +30,22 @@
                     <img src="./Assest/Logo.png" alt="">
                 </div>
                 <div class="nav-link">
-                    <div class="link">
-                        <ul>
-                            <li><a class="clr-white" href="#">Home</a></li>
-                            <li><a class="clr-white" href="#">About Us</a></li>
-                            <li><a class="clr-white" href="#">Properties</a></li>
-                            <li><a class="clr-white" href="#">Services</a></li>
+                    <div >
+                        <ul class="nav-menu">
+                            <li class="nav-item"><a class="clr-white nav" href="./index.html">Home</a></li>
+                            <li class="nav-item"><a class="clr-white nav" href="./About/about.html">About Us</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="nav-btn">
                     <button class="clr-white common-btn">Contact Us</button>
                 </div>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </div>
-
         </div>
     </nav>
 
